# boxer

./: Cargo.toml  README.md  build.rs
rotations/: Bard.json  Enchanter.json  Warlock.json  Warrior.json
src/: README.md  config.rs  game_loop.rs  macros.rs  main.rs  simulation.rs  util.rs  win_util.rs
src/config/: class_config.rs  hex_hwnd.rs
src/configuration/: class_config.rs  config.rs  hex_hwnd.rs  mod.rs
src/simulation/: char_state.rs  global_lock.rs  interactor.rs  keys.rs  loot.rs  maze_solver.rs  mod.rs  rotation.rs  shared_state.rs  simulation_state.rs  skill.rs  skill_caster.rs  skill_tracker.rs  skill_type.rs  state_checker.rs
